--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
     <meta charset="UTF-8">
     <title>Anirudh Aggarwal</title>
     <link rel="stylesheet" href="CSS/styles.css">
+    <link rel="icon" href="favicon (1).ico">
 </head>
 <body>
+    <div class="top-container">
+        <img src="Images/cloud.png" alt="cloud-img">
+        <h1>I'm Anirudh.</h1>
+        <p>a programmer</p>
+        <img src="Images/cloud.png" alt="cloud-img">
+        <img src="Images/mountain.png" alt="Mountain-img">
+    </div>
+
+    <div class="middle-container">
+
+    </div>
+    
+    <div class="bottom-container">
+
+    </div>
     
 </body>
 </html>
