--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <div class="top-container">
         <img src="Images/cloud.png" alt="cloud-img">
         <h1>I'm Anirudh.</h1>
-        <p>a programmer</p>
+        <p>a <span class="pro">pro</span>grammer</p>
         <img src="Images/cloud.png" alt="cloud-img">
         <img src="Images/mountain.png" alt="Mountain-img">
     </div>
-
+    
     <div class="middle-container">
 
     </div>
-    
+
     <div class="bottom-container">
 
     </div>
