--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="top-container">
-        <img src="Images/cloud.png" alt="cloud-img">
+        <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
         <h1>I'm Anirudh.</h1>
         <p>a <span class="pro">pro</span>grammer</p>
-        <img src="Images/cloud.png" alt="cloud-img">
+        <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
         <img src="Images/mountain.png" alt="Mountain-img">
     </div>
     
