--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Anirudh Aggarwal</title>
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="icon" href="favicon (1).ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,300&family=Montserrat:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="top-container">
