Final Decorative Changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile">
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSspNzXRZitYWbTA5QETMeJONwpikdy71Dl5g&usqp=CAU" alt="">
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p class="intro">I am a beginner in Web Development. I'm a sophomore studying BigData. I love food and sports. </p>
         </div>
         <hr>
         <div class="skills">
@@ -39,8 +39,8 @@
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-          <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3>If you love food as much as I do. </h3>
+          <p class="contact-message">Love Dosa, Vada Pav and Tandoori food? Let's talk about how Ahmazing they are! I'm a vegetarian tho!! </p>
           <a class="btn" href="mailto:iamanirudhaggarwal@gmail.com">CONTACT ME</a>
         </div>
       </div>
@@ -50,7 +50,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/anirudh-aggarwal-81b282152">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://github.com/anirudhaggarwal">Github</a>
-        <p>© 2021 Anirudh Aggarwal.</p>
+        <p class="copyright">© 2021 Anirudh Aggarwal.</p>
       </div>
     
 </body>
